@@ -5,6 +5,7 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.atomic.AtomicInteger;
+import java.util.stream.Collectors;
 
 public class DesignServiceImpl implements DesignService {
     AtomicInteger m_id = new AtomicInteger(0);
@@ -50,7 +51,7 @@ public class DesignServiceImpl implements DesignService {
         if (userDesigns == null) {
             throw new RuntimeException("No such User " + ctx.getUserId());
         }
-        return userDesigns.keySet().stream().toList();
+        return userDesigns.keySet().stream().collect(Collectors.toList());
     }
 
     /**
